ee106a/styles.css
html {
    height: 100%;
}

body {
    background-color: black;
    color: white;
    font-family: Arial;
    font-size: 14px;
    height: 100%;
}

.container-fluid {
    height: 100%;
}

.main {
    height: 100%;
}

.navbar {
    padding-top: 5px;
    padding-bottom: 5px;
    font-size:18px;
    border: 0;
    border-radius: 0;
    margin-bottom: 0;
}

.navbar-inverse {
    background-image: none !important;
    background-color: rgba(0, 0, 0, 0.3);
}

.navbar a {
    color: white;
}

.navbar-header a {
    color: white !important;
}

.navbar-header a:hover {
    color: #DDDDDD !important;
}

.navbar-nav li a {
    color: white !important;
}

.navbar-nav li a:hover {
    color: #DDDDDD !important;
}

.navbar-nav > .active > a,
.navbar-nav > .active > a:hover,
.navbar-nav > .active > a:focus {
    background-color: #383838 !important;
    color: #E4E4E4 !important;
}

#title {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
}

#team_picture {
    width: 50%;
    margin: 25px;
}

#hardware_picture {
    width: 70%;
    margin: 25px;
}

#cv_picture {
    width: 30%;
    margin: 25px;
    display: inline;
}

#commander_picture {
    width: 30%;
    margin: 25px;
    display: inline;
}

#setup_picture {
    width: 50%;
    margin: 25px;
}

#image_container {
    padding: 25px;
}

.gallery {
    height: 300px;
    display: inline;
    padding: 10px;
}

#video_container {
    padding: 25px;
}

